Improving performance of HTML report rendering.
Results are now truncated over a certain size (UI still needs some debugging), however, we’re down from a 59Mb file to about 4Mb for large result sets, much easier for the browser to render quickly.

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -140,12 +140,11 @@
             {{- range . }}
                 <category-report slot="reports" id="{{ .Id }}">
                     {{-  $ruleResults := extractResultsForCategory .Id $allResults -}}
+                    {{- $truncated := $ruleResults.Truncated -}}
                     <category-rules>
                     {{- with $ruleResults.Rules -}}
                     {{- range . }}
-                        <category-rule ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}" description="{{ .Rule.Description }}" numResults={{ .Seen }}>
-                            {{- with $ruleResults.Rules -}}
-                            {{- range . }}
+                        <category-rule ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}" description="{{ .Rule.Description }}" numResults={{ .Seen }} truncated={{ $truncated }}>
                                 {{- with .Results -}}
                                 {{- range . }}
                                 <category-rule-result slot="results" message="{{ .Message }}" ruleId="{{ .Rule.Id }}" startLine='{{ .StartNode.Line }}' startCol='{{ .StartNode.Column }}' endLine='{{ .EndNode.Line }}' endCol='{{ .EndNode.Column }}' path="{{ .Path }}">
@@ -153,8 +152,7 @@
                                 </category-rule-result>
                                 {{- end -}}
                                 {{- end -}}
-                            {{- end -}}
-                            {{- end -}}
+
                         </category-rule>
                     {{- end -}}
                     {{- end -}}
