More updates to HTML Report.
It's coming together, feeling a little more useful, rendering is becoming respionsive, experience is mostly through through now, so tha majority of this work is now tuning up quirks and starting to refine the UI.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -27,7 +27,7 @@
                 serif;
                 --background-color: #0d1117;
                 --background-color-with-opacity: rgba(13, 17, 23, 0.85);
-                --page-width: 90em;
+                --page-width: 100vw;
                 --font-color: #e8e9ed;
                 --invert-font-color: #222225;
                 --secondary-color: #b685ff;
@@ -36,7 +36,7 @@
                 --error-color: #ff3c74;
                 --progress-bar-background: #3f3f44;
                 --progress-bar-fill: #62c4ff;
-                --code-bg-color: none;
+                --code-bg-color: rgb(28 33 40);
                 --input-style: solid;
                 --display-h1-decoration: none;
                 --bold-text: #e397fa;
@@ -50,6 +50,7 @@
                 --sl-font-sans: var(--font-stack);
                 --sl-font-mono: var(--font-stack);
                 --sl-font-size-small: 16px;
+                --sl-font-size-xx-small: 10px;
                 --sl-color-primary-50: rgb(243 251 255);
                 --sl-color-primary-100: rgb(215 240 255);
                 --sl-color-primary-200: rgb(184 228 255);
