Cleaning up some of the html-report experience.
Grid is behaving, things are feeling less glitchy, styling is improving. More iterations and clean up over the next few commits.

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -51,6 +51,10 @@
                 --sl-font-mono: var(--font-stack);
                 --sl-font-size-small: 16px;
                 --sl-font-size-xx-small: 10px;
+
+                --rule-font-size: 0.8rem;
+
+
                 --sl-color-primary-50: rgb(243 251 255);
                 --sl-color-primary-100: rgb(215 240 255);
                 --sl-color-primary-200: rgb(184 228 255);
