HTML report CSS tune up and experience clean up.
Things are taking shape now, the core elements are in place. More refinement to come.

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -31,6 +31,7 @@
                 --font-color: #e8e9ed;
                 --invert-font-color: #222225;
                 --secondary-color: #b685ff;
+                --secondary-color-lowalpha: rgba(182, 133, 255, 0.55);
                 --tertiary-color: #a3abba;
                 --primary-color: #62c4ff;
                 --error-color: #ff3c74;
