More updates on HTML report.
UX is coming together, however now we have duplicate content for all categories. so this will need some re-thinking. However, it feels reasonable at the moment, however the filesize is too big. More tuning to come over the next week

--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -141,7 +141,7 @@
                 <category-report slot="violation" id="{{ .Id }}">
                     {{- $ruleResults := extractResultsForCategory .Id $allResults -}}
                     {{- $truncated := $ruleResults.Truncated -}}
-                    <category-rules>
+                    <category-rules id="{{ .Id }}">
                     {{- with $ruleResults.Rules -}}
                     {{- range . }}
                         <category-rule ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}" description="{{ .Rule.Description }}" numResults={{ .Seen }} {{ if $truncated }}truncated=true{{end}}>
