--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -32,6 +32,7 @@
                 --invert-font-color: #222225;
                 --secondary-color: #b685ff;
                 --secondary-color-lowalpha: rgba(182, 133, 255, 0.55);
+                --secondary-color-x-lowalpha: rgba(182, 133, 255, 0.2);
                 --tertiary-color: #a3abba;
                 --primary-color: #62c4ff;
                 --error-color: #ff3c74;
