Fine tuning initial release of HTML report.
It's coming together now, responsive design, however still some quicks with state, colors and a11y. Over the hump of the learning curve now.

--- a/html-report/templates/footer.gohtml
+++ b/html-report/templates/footer.gohtml
@@ -2,4 +2,15 @@
 <footer>
     <!-- do something in here -->
 </footer>
+{{- if not .TestMode -}}
+<script>
+  // statistics
+  window.statistics = {{ renderJSON .Statistics }}
+</script>
+<script>
+    {{ .HydrateJS }}
+</script>
+{{- else -}}
+<script src="http://localhost:8080/js/hydrate.js"></script>
+{{- end -}}
 {{ end}}
