--- a/html-report/ui/src/css/report.css
+++ b/html-report/ui/src/css/report.css
@@ -1,11 +1,18 @@
 html {
     scroll-behavior: smooth;
+    height: 100%;
+    margin: 0;
 }
 
 body {
+    height: 100%;
     word-spacing: -0.1rem;
 }
 
+.vacuum-container {
+    padding-bottom: 0;
+    height: calc(100% - 90px);
+}
 
 hr.header {
     margin: 10px 0 0;
@@ -31,9 +38,9 @@ hr.header {
 
 .report-grid {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 1.5fr 10.5fr;
     grid-template-rows: 1fr;
-    height: 65vh;
+    height: 100%;
 
 }
 
@@ -146,16 +153,23 @@ violation-drawer {
     grid-area: 1 / 2 / 2 / 3;
     min-height: 0;
     min-width: 0;
-
 }
+
 
 .drawer-active {
     border-left: dashed 1px var(--secondary-color);
 }
 
+category-report {
+    overflow-y: auto;
+}
 
+.header-divider {
+    margin-top: var(--global-margin);
+    margin-bottom: var(--global-margin);
+}
 
-/* cater to large screens */
+/* cater to smaller screens */
 @media only screen and (max-width: 1200px) {
 
     result-grid {
@@ -173,7 +187,15 @@ violation-drawer {
         margin-left: 0;
         padding-left: 0;
         grid-area: 2 / 1 / 3 / 2;
+        padding-top: var(--global-padding);
     }
+
+
+    .drawer-active {
+        border-left: none;
+    }
+
+
 
 }
 
