Added maximum violations setting to HTML Report.
Report is now rendering much, much cleaner. Starting to look sharp, instead of a hot mess.

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -35,6 +35,7 @@
                 --secondary-color-x-lowalpha: rgba(182, 133, 255, 0.2);
                 --tertiary-color: #a3abba;
                 --primary-color: #62c4ff;
+                --primary-color-lowalpha: rgba(98, 196, 255, 0.76);
                 --error-color: #ff3c74;
                 --progress-bar-background: #3f3f44;
                 --progress-bar-fill: #62c4ff;
