--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -123,6 +123,7 @@
             <result-grid slot="reports">
                 {{- $allResults := .RuleResults -}}
                 {{- $specString := .SpecString -}}
+                {{- $maxViolations := .MaxViolations -}}
                 {{- with .RuleCategories -}}
                 {{- range . }}
                 <category-report slot="violation" id="{{ .Id }}">
@@ -130,7 +131,7 @@
                     <category-rules id="{{ .Id }}">
                     {{- with $ruleResults.RuleResults -}}
                     {{- range . }}
-                        <category-rule totalRulesViolated={{ len $ruleResults.RuleResults }} ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}" description="{{ .Rule.Description }}" numResults={{ .Seen }} {{ if .Truncated }}truncated=true{{end}}>
+                        <category-rule maxViolations={{ $maxViolations }} totalRulesViolated={{ len $ruleResults.RuleResults }} ruleIcon="{{ ruleSeverityIcon .Rule.Severity }}" ruleId="{{ .Rule.Id }}" description="{{ .Rule.Description }}" numResults={{ .Seen }} {{ if .Truncated }}truncated=true{{end}}>
                                 {{- with .Results -}}
                                 {{- range . }}
                                 <category-rule-result slot="results" message="{{ .Message }}" ruleId="{{ .Rule.Id }}" startLine='{{ .StartNode.Line }}' startCol='{{ .StartNode.Column }}' endLine='{{ .EndNode.Line }}' endCol='{{ .EndNode.Column }}' path="{{ .Path }}">
