--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -54,7 +54,6 @@
                 --sl-font-mono: var(--font-stack);
                 --sl-font-size-small: 16px;
                 --sl-font-size-xx-small: 10px;
-
                 --rule-font-size: 0.8rem;
 
 
@@ -76,6 +75,19 @@
             body {
                 background-color: #0d1117;
             }
+            body::-webkit-scrollbar {
+                width: 8px;
+            }
+            body::-webkit-scrollbar-track {
+                background-color: var(--card-bgcolor);
+            }
+
+            body::-webkit-scrollbar-thumb {
+                box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+                background: var(--primary-color-lowalpha);
+            }
+
+
 
             {{- .ReportCSS -}}
         </style>
