--- a/html-report/ui/src/css/report.css
+++ b/html-report/ui/src/css/report.css
@@ -9,9 +9,10 @@ body {
     word-spacing: -0.1rem;
 }
 
+
 .vacuum-container {
     padding-bottom: 0;
-    height: calc(100% - 90px);
+    height: calc(100% - 100px);
 }
 
 hr.header {
@@ -61,6 +62,20 @@ category-report {
     gap: 10px;
     min-height: 0;
     min-width: 0;
+}
+
+category-report::-webkit-scrollbar {
+    width: 8px;
+}
+
+
+category-report::-webkit-scrollbar-track {
+    background-color: var(--card-bgcolor);
+}
+
+category-report::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background: var(--primary-color-lowalpha);
 }
 
 .wrapper {
