HTML report now almost ready for MVP
Some basic stats need to be added and a small clean up, and it's ready for a release.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -9,6 +9,7 @@
                 <a href="https://quobix.com/vacuum" class="no-style">vacuum</a>
             </div>
         </header>
+        <div class="generated">Report Generated: {{ timeGenerated }}</div>
     </section>
 {{/*</div>*/}}
 {{/*<div class="container vacuum-container">*/}}
