HTML report is now in an MVP state.
After a clean up and a small refactor in places, it will be ready for release. There are some glitches in places and the wrong rules are being run for some reason, however it's usable and works. Some UX testing would be good at this point.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/html-report/templates/header.gohtml
+++ b/html-report/templates/header.gohtml
@@ -37,6 +37,24 @@
                 --primary-color: #62c4ff;
                 --primary-color-lowalpha: rgba(98, 196, 255, 0.76);
                 --error-color: #ff3c74;
+                --error-color-lowalpha: rgba(255, 60, 116, 0.14);
+                --warn-400: #ff6a00;
+                --warn-400-lowalpha: rgba(255, 106, 0, 0.15);
+                --warn-300: #ff9900;
+                --warn-300-lowalpha: rgba(255, 153, 0, 0.05);
+                --warn-200: #ffb700;
+                --warn-200-lowalpha: rgba(255, 183, 0, 0.15);
+                --warn-color: #ffd500;
+                --warn-color-lowalpha: rgba(255, 213, 0, 0.15);
+                --ok-400: #f7ff00;
+                --ok-400-lowalpha: rgba(230, 255, 0, 0.15);
+                --ok-300: #d0ff00;
+                --ok-300-lowalpha: rgba(208, 255, 0, 0.15);
+                --ok-200: #aaff00;
+                --ok-200-lowalpha: rgba(170, 255, 0, 0.15);
+                --ok-color: #1aff00;
+                --ok-color-lowalpha: rgba(170, 255, 0, 0.15);
+
                 --progress-bar-background: #3f3f44;
                 --progress-bar-fill: #62c4ff;
                 --code-bg-color: rgb(28 33 40);
