HTML Report now supports replay.
older reports can be fed in and re-played. all results remain as they were, a snapshot in time.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/html-report/templates/report-template.gohtml
+++ b/html-report/templates/report-template.gohtml
@@ -9,7 +9,7 @@
                 <a href="https://quobix.com/vacuum" class="no-style">vacuum</a>
             </div>
         </header>
-        <div class="generated">Report Generated: {{ timeGenerated }}</div>
+        <div class="generated">Report Generated: {{ timeGenerated .Generated }}</div>
         {{- if gt .Statistics.TotalErrors 0 -}}
         <header-statistic value='{{ .Statistics.TotalErrors }}' label='Errors' preset='error-count'></header-statistic>
         {{- end -}}
